# naukri-job-automation

./: .dockerignore  .gitignore  .vercelignore  COMPLETION_SUMMARY.md  DEPLOYMENT_GUIDE.md  DOCKER_GUIDE.md  Dockerfile  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  RUN_TESTS.md  SETUP_GUIDE.md  TESTING_GUIDE.md  WEB_UI_GUIDE.md  __init__.py  app.py  diagnose_search.py  docker-compose.yml  example_usage.py  find_search_selectors.py  find_selectors.py  index.py  main.py  pyproject.toml  requirements.txt  run_scheduled.py  run_web_ui.py  test_components.py  test_production_setup.py  test_quick.py  vercel.json  wsgi.py
config/: filters.json
core/: __init__.py  config_manager.py  driver_manager.py  exceptions.py  logger.py
modules/: __init__.py  apply.py  filter.py  login.py  scheduler.py  search.py  storage.py
templates/: index.html
utils/: __init__.py  helpers.py  human_behavior.py  validators.py
